--- a/src/pages/migrating/guide/design.mdx
+++ b/src/pages/migrating/guide/design.mdx
@@ -128,7 +128,7 @@ guidance for more information.
 </Column>
 </Row>
 
-#### Toggletip
+### Toggletip
 
 Definition and interactive tootips now use the toggletip component to achieve
 accessibility standards. Toggle tip uses the disclosure pattern to toggle the
@@ -189,22 +189,6 @@ Existing color tokens have been renamed to better reflect their usage. In
 addition to renaming existing tokens, new tokens have been added to fill
 existing color token gaps in our system and to fix complex layering logic.
 
-See Carbon's
-[color overview](https://v11.carbondesignsystem.com/guidelines/color/overview/)
-and
-[color implementation](https://v11.carbondesignsystem.com/guidelines/color/implementation)
-guidance for more information.
-
-<Row>
-  <Column colLg={4} colMd={4} noGutterSm>
-    <ResourceCard
-      subTitle="Migrating color tokens"
-      href="https://github.com/carbon-design-system/carbon/blob/main/docs/migration/11.x-color.md">
-      <MdxIcon name="github" />
-    </ResourceCard>
-  </Column>
-</Row>
-
 #### Color token names
 
 Previously, in v10 many color tokens had numeral endings, now in v11 only
@@ -236,6 +220,13 @@ what were the `ui` color tokens in v10 and are used in a similar way.
 
 </Column>
 </Row>
+
+See Carbon's
+[color overview](https://v11.carbondesignsystem.com/guidelines/color/overview/),
+[color implementation](https://v11.carbondesignsystem.com/guidelines/color/implementation)
+guidance and
+[migrating color tokens](https://github.com/carbon-design-system/carbon/blob/main/docs/migration/11.x-color.md)
+for more information.
 
 ### Inline theming
 
