--- a/src/pages/migrating/guide/design.mdx
+++ b/src/pages/migrating/guide/design.mdx
@@ -222,8 +222,7 @@ what were the `ui` color tokens in v10 and are used in a similar way.
 </Row>
 
 See Carbon's
-[color overview](https://v11.carbondesignsystem.com/guidelines/color/overview/),
-[color implementation](https://v11.carbondesignsystem.com/guidelines/color/implementation)
+[color overview](https://v11.carbondesignsystem.com/guidelines/color/overview/)
 guidance and
 [migrating color tokens](https://github.com/carbon-design-system/carbon/blob/main/docs/migration/11.x-color.md)
 for more information.
