--- a/src/pages/migrating/guide/design.mdx
+++ b/src/pages/migrating/guide/design.mdx
@@ -214,9 +214,14 @@ will only be using the Layering tokens to design.** The layering tokens replace
 what were the `ui` color tokens in v10 and are used in a similar way.
 
 <Row>
-<Column colLg={8}>
+<Column colMd={6} colLg={6}>
 
-![Example of layering token (left) versus contextual layering tokens (right).](images/color-implementation-compare.png)
+![Example of layering token (left) versus contextual layering tokens (right).](images/color-implementation-compare-1.png)
+
+</Column>
+<Column colMd={6} colLg={6}>
+
+![Example of layering token (left) versus contextual layering tokens (right).](images/color-implementation-compare-2.png)
 
 </Column>
 </Row>
@@ -259,9 +264,14 @@ See Carbon's
 guidance for more information.
 
 <Row>
-<Column colLg={8}>
+<Column colMd={6} colLg={6}>
 
-![Example of light or dark mode](images/light-or-dark-mode.png)
+![Example of light or dark mode.](images/light-or-dark-mode-1.png)
+
+</Column>
+<Column colMd={6} colLg={6}>
+
+![Example of light or dark mode.](images/light-or-dark-mode-2.png)
 
 </Column>
 </Row>
