fix: update link to the new URL of Gatsby theme

--- a/src/pages/designing/design-resources/index.mdx
+++ b/src/pages/designing/design-resources/index.mdx
@@ -174,7 +174,7 @@ to help designers with every aspect of image creation and component specs.
 <Column colLg={4} colMd={4} noGutterSm>
   <ResourceCard
     subTitle="Gatsby theme Carbon site"
-    href="https://gatsby-theme-carbon.vercel.app/"
+    href="https://gatsby.carbondesignsystem.com/"
     actionIcon="launch">
 
 ![Gatsby icon](images/gatsby.svg)
