doc-tile-component

--- a/src/pages/components/tile/usage.mdx
+++ b/src/pages/components/tile/usage.mdx
@@ -56,7 +56,6 @@ Tiles are reusable components that provide shortcuts to building cards and other
 modules. Here are some common use cases for when to use tiles:
 
 - To contain related groupings of information or actions
-- To display high-level information and metrics on dashboards
 - To guide users to take actions or navigate
 - To present options for single or multiple selections
 - To hide or show large amounts of content
@@ -248,22 +247,21 @@ modules. Here are some common use cases for when to use tiles:
 
 ## Tile variants
 
-Tiles can function or be implemented in four ways—read-only, clickable,
-selectable, or expandable. These variations of tiles are flexible enough to
-support a variety of different use cases when building more complicating card
-features.
+Tiles can function or be implemented in four ways—base, clickable, selectable,
+or expandable. These variations of tiles are flexible enough to support a
+variety of different use cases when building more complicating card features.
 
 | Variant                   | Purpose                                                                                                  |
 | ------------------------- | -------------------------------------------------------------------------------------------------------- |
-| [Read-only](#read-only)   | For high-level, short, and digestible content pieces such as features, plans, or services offered        |
+| [Base](#base)             | For high-level, short, and digestible content pieces such as features, plans, or services offered        |
 | [Clickable](#clickable)   | For prompting an action, navigating or directing to other pieces of information about the subject matter |
 | [Selectable](#selectable) | For presenting options to a user in a structured manner, such as a set of pricing plans                  |
 | [Expandable](#expandable) | For hiding and revealing a large amount of content in order to focus on specific pieces of info          |
 
-### Read–only
+### Base
 
-Read-only tiles are used to display information to the user, such as features or
-services offered. Read-only tiles are often seen on marketing pages to promote
+Base tiles are used to display information to the user, such as features or
+services offered. Base tiles are often seen on marketing pages to promote
 content or on dashboards that are highly interactive. These tiles can have
 internal calls-to-action (CTAs), such as a [button](/components/button/usage) or
 a [link](/components/link/usage).
@@ -271,7 +269,7 @@ a [link](/components/link/usage).
 <Row>
 <Column colLg={12}>
 
-![Example image of read-only tiles.](images/tile-usage-1.png)
+![Example image of base tiles.](images/tile-usage-1.png)
 
 </Column>
 </Row>
@@ -448,19 +446,6 @@ hierarchical importance like navigation or catalog tiles.
 </Column>
 </Row>
 
-<Row>
-<Column colLg={12}>
-
-![Example image of how tiles are built on the condensed grid but smaller in width.](images/tile-usage-15.png)
-
-<Caption>
-  Example image of how tiles are built on the condensed grid but smaller in
-  width.
-</Caption>
-
-</Column>
-</Row>
-
 #### Layout
 
 There are three basic layouts for tiles: **standard**, **vertical masonry**, and
@@ -537,9 +522,8 @@ information, actions, or notifications.
 
 ### Call-to-actions
 
-For **read-only, selectable, and expandable tiles**, use `$link-01` when icon
-and link are paired together or use `$interactive-04` when the icon stands
-alone.
+For **base, selectable, and expandable tiles**, use `$link-01` when icon and
+link are paired together or use `$interactive-04` when the icon stands alone.
 
 For **clickable tiles**, don’t highlight text or icons to avoid them being
 confused as links or clickable.
@@ -565,7 +549,7 @@ confused as links or clickable.
 #### Mouse
 
 Users can trigger an item by clicking anywhere in any tile container, except
-read-only tiles.
+base tiles.
 
 <Row>
 <Column colLg={8}>
@@ -583,9 +567,9 @@ read-only tiles.
 <Row>
 <Column colLg={8}>
 
-![Read-only tiles are static, except buttons or links .](images/tile-usage-25.png)
+![Base tiles are static, except buttons or links .](images/tile-usage-25.png)
 
-<Caption>Read-only tiles are static, except buttons or links .</Caption>
+<Caption>Base tiles are static, except buttons or links .</Caption>
 
 </Column>
 </Row>
