--- a/src/pages/guidelines/typography/overview.mdx
+++ b/src/pages/guidelines/typography/overview.mdx
@@ -58,7 +58,7 @@ are implemented in code. The productive type set uses fixed headings. Expressive
 headings are responsive and the type styles change size at different
 breakpoints.
 
-For more detail, see [Type usage](/guidelines/typography/type-usage/) and
+For more detail, see [Styling strategies](/guidelines/typography/styling-strategies/) and
 [Type sets](/guidelines/typography/type-sets/).
 
 ## Typeface: IBM Plex
