trouble shooting images
added in caption markdown

--- a/src/pages/patterns/forms-pattern/index.mdx
+++ b/src/pages/patterns/forms-pattern/index.mdx
@@ -153,16 +153,25 @@ large number of optional fields, we recommend devoting an entire section to
 optional fields to avoid excessive repetition.
 
 <Row>
-<Column colLg={6}>
+<Column colLg={8}>
 
 ![Example of a short user sign-up form using the optional pattern](images/form-usage-optional.png)
 
+<Caption>
+  Example of a short user sign-up form using the optional pattern
+</Caption>
+
 </Column>
 </Row>
+
 <Row>
-<Column colLg={6}>
+<Column colLg={8}>
 
 ![Example of product configuration properties using the required pattern](images/form-usage-required.png)
+
+<Caption>
+  Example of product configuration properties using the required pattern
+</Caption>
 
 </Column>
 </Row>
