--- a/src/pages/guidelines/typography/overview.mdx
+++ b/src/pages/guidelines/typography/overview.mdx
@@ -49,7 +49,7 @@ allow for a more dramatic, graphic use of type in editorial and marketing
 design. These type styles are excellent for long form reading and scanning, but
 would be distracting for use in product.
 
-Within **Body styles** and **Supporting styles**, the same set of styles are
+Within **Body styles** and **Utility styles**, the same set of styles are
 offered. Productive styles are named with a suffix of `-01` and expressive style
 names have a suffix of `-02`.
 
