--- a/src/pages/patterns/forms-pattern/index.mdx
+++ b/src/pages/patterns/forms-pattern/index.mdx
@@ -185,7 +185,7 @@ optional fields to avoid excessive repetition.
 colMd={6} colLg={6}
 caption="DO mark fields (required) when the majority of the fields are optional.">
 
-![DO mark fields (required) when the majority of the fields are optional.](images/Do-Form-required.png)
+![Do mark fields (required) when the majority of the fields are optional.](images/Do-Form-required.png)
 
 </DoDont>
 <DoDont
@@ -193,7 +193,7 @@ colMd={6} colLg={6}
 type="dont"
 caption="DON'T mark fields (optional) when the majority of the fields are optional.">
 
-![DON'T mark fields (optional) when the majority of the fields are optional.](images/Dont-form-required.png)
+![Don't mark fields (optional) when the majority of the fields are optional.](images/Dont-form-required.png)
 
 </DoDont>
 </DoDontRow>
