--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -126,47 +126,4 @@ building websites and user interfaces.
 
 ### Latest news and articles
 
-<Row>
-<Column colLg={4} colMd={4} noGutterMdLeft>
-
-<ArticleCard
-    color="dark"
-    title="Carbon v11 Beta 1"
-    author="Josh Black"
-    date="August 6, 2021"
-    href="https://medium.com/carbondesign/carbon-v11-beta-1-33488b0280f0"
-    >
-
-![Carbon v11 Beta 1](./homepage/images/carbon_2021-august-update.png)
-
-</ArticleCard>
-</Column>
-<Column colLg={4} colMd={4} noGutterMdLeft>
-
-<ArticleCard
-    color="dark"
-    title="Carbon’s 2021 release: April update"
-    author="Josh Black"
-    date="April 22, 2021"
-    href="https://medium.com/carbondesign/carbons-2021-release-april-update-9d23242b3dea"
-    >
-
-![Carbon's 2021 release: April update](./homepage/images/carbon_2021-april-update.png)
-
-</ArticleCard>
-</Column>
-<Column colLg={4} colMd={4} noGutterMdLeft>
-<ArticleCard
-    color="dark"
-    title="The new Gatsby theme Sketch kit has arrived!"
-    author="Diana Stanciulescu"
-    date="April 1, 2021"
-    href="./designing/design-resources/#gatsby-theme-sketch-kit"
-    >
-
-![Gatsby theme announcement](./homepage/images/gatsby_announcement.png)
-
-</ArticleCard>
-</Column>
-
-</Row>
+<MediumPosts postLimit={3} />
