--- a/src/pages/guidelines/typography/overview.mdx
+++ b/src/pages/guidelines/typography/overview.mdx
@@ -1,7 +1,6 @@
 ---
 label:
-  When used properly, typography can help create clear hierarchies, organize
-  information, and guide users through the product or experience.
+  Our approach to the typographic system uses IBM Plex as its typeface. It has been carefully engineered with suitable scales, styles, and weights to help create clear hierarchies and organize information that guides users through IBM products or experiences.
 title: Typography
 description:
   Typography can help create clear hierarchies, organize information, and guide
@@ -14,8 +13,7 @@ import TypeWeight from '../../../../src/components/TypeWeight';
 
 <PageDescription>
 
-Typography can help create clear hierarchies, organize information, and guide
-users through a product or experience.
+Our approach to the typographic system uses IBM Plex as its typeface. It has been carefully engineered with suitable scales, styles, and weights to help create clear hierarchies and organize information that guides users through IBM products or experiences.
 
 </PageDescription>
 
@@ -93,7 +91,9 @@ font-family: 'IBM Plex Mono', 'Menlo', 'DejaVu Sans Mono',
 
 The IBM type scale is built on a single equation. The formula for our scale was
 created to provide hierarchy for all types of experiences. The formula assumes
-that y₀=12 px:
+that y₀=12 px.
+
+<br/>
 
 <TypeScaleTable />
 
