--- a/src/pages/guidelines/typography/type-sets.mdx
+++ b/src/pages/guidelines/typography/type-sets.mdx
@@ -1,7 +1,6 @@
 ---
 label:
-  Carbon uses type tokens to manage typography, and these tokens sit within two
-  type sets.
+  Carbon uses clear naming approach and type tokens to manage typography across complex and layered layouts and patterns, and these tokens sit within two type sets: expressive and productive.
 title: Typography
 description:
   The productive and expressive type sets support designers creating for a full
@@ -13,8 +12,7 @@ import TypesetStyle from 'components/TypesetStyle';
 
 <PageDescription>
 
-Carbon uses type tokens to manage typography, and these tokens sit within two
-type sets: expressive and productive.
+Carbon uses clear naming approach and type tokens to manage typography across complex and layered layouts and patterns, and these tokens sit within two type sets: expressive and productive.
 
 </PageDescription>
 
