feat(MediumPosts): shadow'd component to fix colors

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -126,4 +126,4 @@ building websites and user interfaces.
 
 ### Latest news and articles
 
-<MediumPosts postLimit={3} />
+<MediumPosts postLimit={3} color="dark" />
