--- a/src/pages/guidelines/typography/code.mdx
+++ b/src/pages/guidelines/typography/code.mdx
@@ -1,18 +1,16 @@
 ---
 label:
-  When used properly, typography can help create clear hierarchies, organize
-  information, and guide users through the product or experience.
+  Type is a core part of any offering and critical to how brands express and communicate throughout any experience. Use the Carbon type package to leverage IBM Plex and create effective typography across your products more easily.
 title: Typography
 description:
   Typography can help create clear hierarchies, organize information, and guide
   users through a product or experience.
-tabs: ['Overview', 'Productive', 'Expressive', 'Code']
+tabs: ['Overview', 'Styling strategies', 'Type sets', 'Code']
 ---
 
 <PageDescription>
 
-Type is a core part of any offering. Use the Carbon type package to leverage IBM
-Plex across your product.
+Type is a core part of any offering and critical to how brands express and communicate throughout any experience. Use the Carbon type package to leverage IBM Plex and create effective typography across your products more easily.
 
 </PageDescription>
 
