doc-tile-component

--- a/src/pages/components/tile/usage.mdx
+++ b/src/pages/components/tile/usage.mdx
@@ -35,7 +35,7 @@ usage guidance is purposefully high-level. It focuses specifically on the tile
 itself, not the structure of the information or interactive elements that the
 tile contains—that type of information will be found in the card pattern.
 
-#### Tiles vs. Cards
+#### Tiles versus Cards
 
 Tiles are simple and foundational. Cards can be very complex. They are built
 upon the tile foundation and have various patterns, multiple actions, overflow
@@ -599,12 +599,12 @@ future.
 Specific keyboard interactions will depend on the type of tile you are using and
 what content it contains but all types of tiles can take focus.
 
-| Key             | Interaction                                                                                               |
-| --------------- | --------------------------------------------------------------------------------------------------------- |
-| Tab             | For high-level, short, and digestible content pieces such as features, plans, or services offered.        |
-| Shit + Tab      | For prompting an action, navigating or directing to other pieces of information about the subject matter. |
-| Return or Enter | For presenting options to a user in a structured manner, such as a set of pricing plans.                  |
-| Space           | For hiding and revealing a large amount of content in order to focus on specific pieces of info.          |
+| Key             | Interaction                                                                                                                                                                |
+| --------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| Tab             | Move forward through tiles (if tiles themselves are clickable) and interactive elements within the tiles in a logical order                                                |
+| Shit + Tab      | Move backward through tiles (if tiles themselves are clickable) and interactive elements within the tiles in a logical order                                               |
+| Return or Enter | Return or enter will open the tile (if the tile itself is clickable). If the tile is not clickable but has interactive elements, their corresponding actions are performed |
+| Space           | If the tile is selectable, the space bar will toggle tile selection                                                                                                        |
 
 ## Related
 
