--- a/src/pages/developing/react-tutorial/step-1.mdx
+++ b/src/pages/developing/react-tutorial/step-1.mdx
@@ -78,7 +78,7 @@ you have completed this tutorial step. There are two choices: SSH or HTTPS
 git remote add upstream git@github.com:carbon-design-system/carbon-tutorial.git
 ```
 
-*HTTPS*
+#### HTTPS
 ```bash
 git remote add upstream https://github.com/carbon-design-system/carbon-tutorial.git
 ```
