--- a/src/pages/developing/react-tutorial/step-1.mdx
+++ b/src/pages/developing/react-tutorial/step-1.mdx
@@ -72,7 +72,7 @@ cd carbon-tutorial
 Add a remote called `upstream` so we can eventually submit a pull request once
 you have completed this tutorial step. There are two choices: SSH or HTTPS
 
-*SSH*
+#### SSH
 
 ```bash
 git remote add upstream git@github.com:carbon-design-system/carbon-tutorial.git
