--- a/src/pages/components/search/accessibility.mdx
+++ b/src/pages/components/search/accessibility.mdx
@@ -53,7 +53,7 @@ understand the purpose of the button.
 ## Accessibility testing
 
 Accessibility issues are tracked in the
-[Carbon Component GitHub repository](https://github.com/carbon-design-system/carbon/milestone/).
+[Carbon Component GitHub repository](https://github.com/carbon-design-system/carbon/issues?q=is%3Aopen+label%3A%22type%3A+a11y+%E2%99%BF%22+label%3A%22component%3A+search%22+).
 
 ### Automated test
 
