--- a/src/pages/components/toggle/accessibility.mdx
+++ b/src/pages/components/toggle/accessibility.mdx
@@ -76,7 +76,7 @@ content to this component.
 ## Accessibility testing
 
 Accessibility issues are tracked in the
-[Carbon Component GitHub repository](https://github.com/carbon-design-system/carbon/milestones).
+[Carbon Component GitHub repository](https://github.com/carbon-design-system/carbon/issues?q=is%3Aopen+label%3A%22type%3A+a11y+%E2%99%BF%22+label%3A%22component%3A+toggle%22+).
 
 ### Automated test
 
