--- a/src/pages/components/breadcrumb/accessibility.mdx
+++ b/src/pages/components/breadcrumb/accessibility.mdx
@@ -69,7 +69,7 @@ content to this component.
 ## Accessibility testing
 
 Accessibility issues are tracked in the
-[Carbon Design System GitHub repository](https://github.com/carbon-design-system/carbon/labels/type%3A%20a11y%20%E2%99%BF).
+[Carbon Design System GitHub repository](https://github.com/carbon-design-system/carbon/issues?q=is%3Aopen+label%3A%22type%3A+a11y+%E2%99%BF%22+label%3A%22component%3A+breadcrumb%22+).
 
 ### Automated test
 
