--- a/src/pages/components/form/accessibility.mdx
+++ b/src/pages/components/form/accessibility.mdx
@@ -79,7 +79,7 @@ content to this component.
 ## Accessibility testing
 
 Accessibility issues are tracked in the
-[Carbon Component GitHub repository](https://github.com/carbon-design-system/carbon/milestones).
+[Carbon Component GitHub repository](https://github.com/carbon-design-system/carbon/issues?q=is%3Aopen+label%3A%22type%3A+a11y+%E2%99%BF%22+label%3A%22component%3A+form%22+).
 For screen reader test results refer to the Accessibility guidance for each
 Carbon Component form control used.
 
