--- a/src/pages/components/notification/accessibility.mdx
+++ b/src/pages/components/notification/accessibility.mdx
@@ -77,7 +77,7 @@ key is used to move focus to the close button within the notification and the
 ## Accessibility testing
 
 Accessibility issues are tracked in the
-[Carbon Component GitHub repository](https://github.com/carbon-design-system/carbon/milestones).
+[Carbon Component GitHub repository](https://github.com/carbon-design-system/carbon/issues?q=is%3Aopen+label%3A%22type%3A+a11y+%E2%99%BF%22+label%3A%22component%3A+notification%22+).
 
 ### Automated test
 
