doc-tile-component

--- a/src/pages/components/tile/usage.mdx
+++ b/src/pages/components/tile/usage.mdx
@@ -326,7 +326,7 @@ the chevron icon.
 <Row>
 <Column colLg={8}>
 
-![Example image of expandable tiles/ single select tiles](images/tile-usage-5.png)
+![Example image of expandable tiles/ single select tiles](images/tile-usage-5.gif)
 
 </Column>
 </Row>
