chore: minify rediculous images

--- a/src/pages/case-studies/consistency-in-the-cloud.mdx
+++ b/src/pages/case-studies/consistency-in-the-cloud.mdx
@@ -89,7 +89,7 @@ patterns.
 <Row>
 <Column colLg={8}>
 
-![Design jam](images/design-jam.png)
+![Design jam](images/design-jam.jpg)
 
 <Caption>Cloud Design Jam, May 2019.</Caption>
 
