--- a/src/pages/guidelines/2x-grid/implementation.mdx
+++ b/src/pages/guidelines/2x-grid/implementation.mdx
@@ -1327,7 +1327,7 @@ for every image or container to be one of these sizes. However it's important to
 use them to set the foundation of your layouts, especially in the case of same
 size tiles.
 
-![Aspect ratio](images/Aspect_Ratio.png)
+![Aspect ratio](images/Aspect_Ratio.jpg)
 
 <br />
 
