--- a/src/pages/patterns/login-pattern/index.mdx
+++ b/src/pages/patterns/login-pattern/index.mdx
@@ -159,7 +159,7 @@ alternative logins include:
 <Row>
 <Column colLg={12}>
 
-![Example of login form with alternate login options](./images/3_Login_alternates_1120.png)
+![Example of login form with alternate login options](./images/3_Login_alternates_1120.jpg)
 
 <Caption>Example of a login form with alternate login options</Caption>
 
