--- a/src/pages/data-visualization/complex-charts/index.mdx
+++ b/src/pages/data-visualization/complex-charts/index.mdx
@@ -175,7 +175,8 @@ Here's an example using elkjs in react
   style="width:100%; height:500px; border:0; border-radius: 4px; overflow:hidden;"
   title="carbon-charts-react-elkjs-diagram"
   allow="accelerometer; ambient-light-sensor; camera; encrypted-media; geolocation; gyroscope; hid; microphone; midi; payment; usb; vr; xr-spatial-tracking"
-  sandbox="allow-forms allow-modals allow-popups allow-presentation allow-same-origin allow-scripts"></iframe>
+  sandbox="allow-forms allow-modals allow-popups allow-presentation allow-same-origin allow-scripts"
+></iframe>
 
 <Row>
 <Column  colLg={12} colMd={8} colSm={4} >
@@ -475,7 +476,7 @@ accessible results.
 <Row>
 <Column  colLg={12} colMd={8} colSm={4} >
 
-![Mapbox white style](images/15_adv_geo_mapbox_a_928.png)
+![Mapbox white style](images/15_adv_geo_mapbox_a_928.jpg)
 
 <Caption>Example of a Carbon’s White theme style in Mapbox</Caption>
 
