--- a/src/pages/guidelines/typography/type-sets.mdx
+++ b/src/pages/guidelines/typography/type-sets.mdx
@@ -12,7 +12,7 @@ import TypesetStyle from 'components/TypesetStyle';
 
 <PageDescription>
 
-Carbon uses clear naming approach and type tokens to manage typography across complex and layered layouts and patterns, and these tokens sit within two type sets: expressive and productive.
+Carbon uses a clear naming approach and type tokens to manage typography across complex and layered layouts and patterns, and these tokens sit within two type sets: expressive and productive.
 
 </PageDescription>
 
