--- a/src/pages/components/notification/usage.mdx
+++ b/src/pages/components/notification/usage.mdx
@@ -235,18 +235,6 @@ critical for a user to read or interact with the notification.
 
 ## Toast notifications
 
-There are two types of toast notifications—polite and assertive. Polite toast
-notifications are used to display a message to the user that does not interrupt
-keyboard and screen reader users' current task and then queues the notification
-until whatever task the user is currently working on is complete. Assertive
-toast notifications interrupt a user's task when triggered and are more intrusive
-to keyboard and screen reader users.
-
-| Type      | Purpose                                                                                                                                                                                                                                |
-| --------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| Polite    | Polite toast notifications are used to display a message to the user that does not interrupt keyboard and screen reader users' current task. These notifications contain action buttons and are dismissed by the user.                  |
-| Assertive | Assertive toast notifications take focus when triggered and are more intrusive to keyboard and screen reader users. These notifications do not contain interactive elements and are automatically dismissed or dismissed by the user.  |
-
 ### Toast formatting
 
 <Row>
@@ -257,17 +245,14 @@ to keyboard and screen reader users.
 </Column>
 </Row>
 
-#### Action (polite only)
+#### Action
 
-Polite toast notifications allow for interactive elements. Only one action
-button is allowed within polite toast notifications. Action buttons should
-clearly state the user action. This action frequently takes users to a flow or
-page related to the message, where they can resolve the notification. If
+Toast notifications can be actionable and allow for interactive elements. Only
+one tertiary action button is allowed within toast notifications. Action buttons
+should clearly state the user action. This action frequently takes users to a
+flow or page related to the message, where they can resolve the notification. If
 multiple actions are required, consider using a
-[dialog](https://carbondesignsystem.com/patterns/dialog-pattern/). Assertive
-toast notifications cannot include interactive elements due to limitations with
-how ARIA tags are interpreted by screen readers and are inaccessible via
-keyboard and screen readers.
+[dialog](https://carbondesignsystem.com/patterns/dialog-pattern/).
 
 <Row>
 <Column colLg={8}>
@@ -278,8 +263,8 @@ keyboard and screen readers.
 </Row>
 
 <Caption>
-  Example of a polite toast notification with action button (left) and assertive
-  toast notification with time stamp (right)
+  Example of a toast notification with action button (left) and a toast
+  notification with time stamp (right)
 </Caption>
 
 #### Time stamp
@@ -315,17 +300,17 @@ dismissed.
 
 #### Dismissal
 
-Polite toast notifications remain on screen until a user dismisses the toast
-with the close button. These toasts stay on screen because a user usually needs
-to take action.
-
-Assertive toast notifications can be dismissed automatically after five seconds
-on the screen. They can also include a close button so users can dismiss them
-sooner. Because these toast notifications dismiss automatically, users must be
-able to access them elsewhere after the toast disappears. This allows them to be
-accessible for users who need more time reading the notification or who may want
-to refer back to the notification. All toast notifications cover content on the
-screen so they should always be easily dismissed.
+Toasts can be automatically dismissed or dismissed by the user. If the toast
+includes an action button, then the notification should remain on screen until
+the user dismisses it. The user then has enough time to interact with the button
+without the toast closing too soon. If a toast is not actionable, it can dismiss
+automatically after five seconds on the screen or be dismissed by the user. They
+can also include a close button so users can dismiss them sooner. Is a toast
+notification does dismiss automatically, users must be able to access them
+elsewhere after the toast disappears. This allows them to be accessible for
+users who need more time reading the notification or who may want to refer back
+to the notification. All toast notifications cover content on the screen so they
+should always be easily dismissed.
 
 ## Modifiers
 
@@ -347,6 +332,25 @@ low-contrast notifications.
 
 <Caption>
     High contrast notification (top); low contrast notification (bottom)
+</Caption>
+</Column>
+</Row>
+
+### Actionable
+
+Carbon supports actions within notifications for inline and toast variants. With
+actionable notifications, only one action is allowed per notification. This
+action frequently takes users to a flow or page related to the message, where
+they can resolve the notification. Consider using a notification center where a
+user can revisit and act on past notifications.
+
+<Row>
+<Column colLg={8}>
+
+![Actionable inline and toast notifications](images/08_toast-action-608.png)
+
+<Caption>
+    Actionable toast notification (top); actionable inline notification (bottom)
 </Caption>
 </Column>
 </Row>
