Fix a small typo in documentation
Fix the typo in documentation by updating with correct component name.

--- a/src/pages/components/inline-loading/code.mdx
+++ b/src/pages/components/inline-loading/code.mdx
@@ -7,7 +7,7 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 <PageDescription>
 
-Preview the accordion component with the React live demo. For detailed code
+Preview the inline loading component with the React live demo. For detailed code
 usage documentation, see the Storybooks for each framework below.
 
 </PageDescription>
